--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
-    />
+      href="https://img.icons8.com/?size=100&id=30840&format=png&color=000000"
+    >
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -15,7 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Nice Gadgets</title>
   </head>
   <body>
     <div id="root"></div>
